--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,19 +9,14 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
-                "-I",
-                "${fileDirname}",  // Include the local directory (src) for header files
-                "-I",
-                "/usr/include",  // Include path for GLEW (Cygwin path)
-                "-I",
-                "/usr/include/SDL2",  // Include path for SDL2 (Cygwin path)
-                "-L",
-                "/usr/lib",  // Library path (Cygwin path)
-                "-lGLEW",  // Link against GLEW
-                "-lGL",  // Link against OpenGL
-                "-lSDL2",  // Link against SDL2
-                "-lSDL2main"  // Link against SDL2main
+                "${fileDirname}/${fileBasenameNoExtension}.exe",
+                "-IC:/Users/Jordan/msys64/mingw32/include/SDL2",
+                "-IC:/Users/Jordan/msys64/mingw32/include/GL",
+                "-LC:/Users/Jordan/msys64/mingw32/lib",
+                "-lglew32",
+                "-lSDL2",
+                "-lSDL2main",
+                "-lopengl32"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
