--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,8 @@
         "memory_resource": "cpp",
         "numeric": "cpp",
         "random": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "bitset": "cpp",
+        "set": "cpp"
     }
 }
