--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "-o",
                 "zx_spectrum_emulator",
                 "src/main.cpp",
+                "src/tests/instruction_test.cpp",
                 "src/Z80.cpp",
                 "src/Emulator.cpp",
                 "src/Display.cpp",
@@ -20,6 +21,7 @@
                 "src/utils.cpp",
                 "src/Debugger.cpp",
                 "src/instructions.cpp",
+                "-D RUN_TESTS",
                 "-D GLEW_STATIC",
                 "-IC:/Users/Jordan/msys64/mingw32/include/SDL2",
                 "-IC:/Users/Jordan/msys64/mingw32/include",
